# dcdcpy

./: .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
dcdcpy/: __init__.py  import.py  importing.py  internal.py
docs/: Makefile  conf.py  example.ipynb  index.rst  installation.rst  make.bat  usage.rst
src/dcdcpy/: __init__.py  dcdcpy.py
src/dcdcpy/data/: docs_bic.csv
tests/: __init__.py  test_dcdcpy.py
